--- a/manuscript/manual.bib
+++ b/manuscript/manual.bib
@@ -1,3 +1,11 @@
+@article{Gravel2018,
+author={Gravel, Dom and Baiser, Ben and Dunne, Jennifer A and Kopelke, Jens-Peter and Martinez, Neo D and Nyman, Tommi and Poisot, Tim and Stouffer, Daniel B and Tylianakis, Jason and Wood, Spencer A and Roslin, Tomas},
+title={Bringing Elton and Grinell together: a quantitative framework to represent the biogeography of ecological interactions},
+journal={Ecography},
+year={2018},
+volume={41},
+pages={1--15},
+doi={10.111/ecog.04006}}
 @article{DesjardinsProulx2017,
 author={Desjardins-Proulx, Philippe and Laigle, Idaline and Poisot, Tim and Gravel, Dominique},
 journal={PeerJ},
