main text ready for co-authors

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -393,13 +393,13 @@ All data used in this study have been independently published and are accessible
 \section*{Figures}
 
   \begin{figure}[h!]
-    \caption{Nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that truly occur. Some feasible interactions (black squares in True matrix) are less likely than others (grey squares; lighter grey is less likely) based on species traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to be prey for lions and assign this interaction a probability of 0.\\
+    \caption{Nested levels of uncertainty mean that an observed interaction matrix is unlikely to capture all of the interactions that truly occur. Some feasible interactions (black squares in True matrix) are less likely than others (grey squares; lighter grey is less likely) based on species traits. For example, lions are less likely to predate upon elephants than zebras. If our trait model is incomplete (e.g., if we neglect group hunting in lions), we might assume that elephants are too large to be lion prey and assign this interaction a probability of 0.\\
     \indent Interactions occur with different probabilities in any given sample. We show six example networks representing interactions observed over two days at three sites. Interactions which occur during fewer sampling days are less likely to be observed.\\
     \indent Not all interactions are equally detectable. For example, interactions involving cryptic species are less likely to be observed.\\
     \indent After combining these layers of uncertainty, some interactions which truly occur are very unlikely to be observed. The observed matrix (bottom) is a subsample of the true matrix where the probability of observing each interaction depends upon multiple layers of uncertainty. Note that some low-probability interactions (e.g., lion predation on zebra) are included while others (e.g., lion predation on elephants) are not. For an illustration of the way in which these levels of uncertainty combine in simulated data, and the effects of uncertainty on network structure, see \emph{Appendix S1}. Attributions for images are given in \emph{Appendix S1-A}.}
     \label{conceptual_fig}
     \begin{center}
-    \includegraphics*[height=.5\textheight]{figures/conceptual_fig.eps}
+    \includegraphics*[height=.45\textheight]{figures/conceptual_fig.eps}
     % \includegraphics*[height=.5\textheight]{Figure_1.eps}
     \end{center}
     \end{figure}
