reply now ready for co-authors

--- a/manuscript/reply_to_reviewers.tex
+++ b/manuscript/reply_to_reviewers.tex
@@ -112,7 +112,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} The MLE estimate is part of the Bayesian framework as it dictates the shape of the distribution that we use. Moreover, it helps to formalise our argument that most networks are undersampled, justifying the Bayesian approach and the use of priors to reduce/set bounds around the resulting uncertainty. We therefore feel that it is important to keep some discussion of the MLE estimate in the manuscript. We now introduce the MLE formally within this context (lines 178-184) and take care to be explicit when using it to explore the sample size needed in the absence of prior knowledge later (caption of Figure S2, \emph{Appendix S2}}).
+		\textbf{R:} The MLE estimate is part of the Bayesian framework as it dictates the shape of the distribution that we use. Moreover, it helps to formalise our argument that most networks are undersampled, justifying the Bayesian approach and the use of priors to reduce/set bounds around the resulting uncertainty. We therefore feel that it is important to keep some discussion of the MLE estimate in the manuscript. We now introduce the MLE formally within this context (lines 178-184) and take care to be explicit when using it to explore the sample size needed in the absence of prior knowledge later (caption of Figure S2, \emph{Appendix S2}).
 
 
 		Lines 178-184:
@@ -532,7 +532,7 @@
 
 
 		\begin{quotation}
-		  \subsection*{An empirical example}
+		  \textbf{An empirical example}
 
 		      To illustrate the process of constructing a Bayesian network to quantify uncertainty about interactions, we use the comprehensively-sampled system of willows (\emph{Salix}), herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (\emph{Appendix S5}). 
 		      The high spatiotemporal resolution of this dataset makes it ideal for illustrating the difficulties in completely sampling a network; even with such an unusually high sampling effort, there were many pairs of species which were rarely or never observed together and about which we therefore have high uncertainty about interaction probabilities (Fig.~\ref{histograms}). Using the Bayesian framework above, we can identify which potential interactions are more and less uncertain, allowing us to better predict the true structure of the metaweb. 
